[tool.poetry]
name = "validation_modules"
version = "0.1.0"
description = "LLM validation modules"
authors = ["Ashwarya Maratha <marathaashwarya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "validation_modules", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
pydantic = "^2.7.0"
colorama = "^0.4.6"
openai = "^1.59.6"
psycopg2-binary = "^2.9.10"
tqdm = "^4.67.1"
requests = "^2.31.0"
numpy = "^1.24.3"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"